--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,4 +46,7 @@ dependencies {
 
     implementation 'com.github.prolificinteractive:material-calendarview:1.4.3'
 
+    implementation 'com.github.BlacKCaT27:CurrencyEditText:2.0.2'
+
+
 }
