--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,17 +15,19 @@
         android:theme="@style/Theme.HomeFinances"
         tools:targetApi="31">
         <activity
+            android:name=".activity.IntroductionsActivity"
+            android:exported="false"
+            android:theme="@style/Theme.Design.NoActionBar.IntroActivity" />
+        <activity
             android:name=".activity.ExpensesActivity"
             android:exported="false"
             android:parentActivityName=".activity.LoginActivity"
-            android:theme="@style/Theme.Design.NoActionBar.ExpenseActivity"/>
+            android:theme="@style/Theme.Design.NoActionBar.ExpenseActivity" />
         <activity
             android:name=".activity.IncomeActivity"
             android:exported="false"
             android:parentActivityName=".activity.LoginActivity"
-            android:theme="@style/Theme.Design.NoActionBar.IncomeActivity"
-
-            />
+            android:theme="@style/Theme.Design.NoActionBar.IncomeActivity" />
         <activity
             android:name=".activity.RegisterActivity"
             android:exported="false"
