--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,10 @@
         android:theme="@style/Theme.HomeFinances"
         tools:targetApi="31">
         <activity
+            android:name=".activity.TermsOfUseActivity"
+            android:parentActivityName=".activity.RegisterActivity"
+            android:exported="false" />
+        <activity
             android:name=".activity.IntroductionsActivity"
             android:exported="false"
             android:theme="@style/Theme.Design.NoActionBar.IntroActivity" />
