--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
         tools:targetApi="31">
         <activity
             android:name=".activity.TermsOfUseActivity"
-            android:exported="false" />
+            android:exported="false"
+            />
         <activity
             android:name=".activity.IntroductionsActivity"
             android:exported="false"
